# kt-3pi

./: .gitignore  CMakeLists.txt  README.md
examples/: BW.cpp  KT_omega_subtracted.cpp  KT_omega_unsubtracted.cpp  omega_BW.cpp  omega_KT.cpp  once_subtracted.cpp  subtracted.cpp  twice_subtracted.cpp  unsubtracted.cpp
executables/: BW.cpp  once_subtracted.cpp  twice_subtracted.cpp
include/: amp.hpp  amplitude.hpp  aux_math.hpp  breit_wigner.hpp  constants.hpp  dalitz.hpp  dalitz_fit.hpp  decay_kinematics.hpp  kt.hpp  kt_amplitude.hpp  kt_ang_integral.hpp  kt_conformal.hpp  kt_disp_integral.hpp  kt_equations.hpp  kt_isobar.hpp  kt_iteration.hpp  kt_options.hpp  kt_sub_polynomial.hpp  omnes.hpp  param_fit.hpp  pipi.hpp  poly_exp.hpp  poly_param_fit.hpp  test_poly.hpp  unitarity.hpp  utilities.hpp  wigner_d.hpp
include/kt/: kt_amplitude.hpp  kt_ang_integral.hpp  kt_disp_integral.hpp  kt_equations.hpp  kt_isobar.hpp  kt_iteration.hpp  kt_options.hpp
include/pipi/: omnes.hpp
omega_3pi_plots/: dalitz_deviation.gnu
scripts/: omega_BW.cpp  omega_KT.cpp  phi_BW.cpp
src/: amp.cpp  amplitude.cpp  amplitude.hpp  aux_math.cpp  aux_math.hpp  breit_wigner.cpp  dalitz.cpp  dalitz_fit.cpp  decay_kinematics.cpp  isobar.cpp  kinematics.hpp  kt.cpp  kt_amplitude.cpp  kt_ang_integral.cpp  kt_conformal.cpp  kt_disp_integral.cpp  kt_equations.cpp  kt_isobar.cpp  kt_iteration.cpp  main.cpp  omnes.cpp  omnes.hpp  param_fit.cpp  pipi.cpp  pipi.hpp  poly_exp.cpp  poly_param_fit.cpp  test.cpp  utilities.cpp  wigner_d.cpp
src/decay_kinematics/: CoM_frame.cpp  angular_functions.cpp  invariants.cpp  kinematic_singularities.cpp  polar.cpp  quantum_numbers.cpp
src/kt/: kt_amplitude.cpp  kt_ang_integral.cpp  kt_disp_integral.cpp  kt_equations.cpp  kt_isobar.cpp
src/pipi/: omnes.cpp  pipi.cpp
tex/: KT-a1.bib  KT-a1.sty  KT-a1.tex
tex/text/: 1-introduction.tex  2-helicity.tex  3-isobar.tex  4-khuri-treiman.tex  5-COMPASS_a1.tex  app_1-analytic-con.tex  app_2-example-2pp.tex
